--- a/index.html
+++ b/index.html
@@ -7,30 +7,33 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <div class="nav">
-      <h1 class="logo">Twotter</h1>
-      <div class="auth-buttons">
-        <a href="login.html" class="btn">Log in</a>
-        <a href="signup.html" class="btn btn-outline">Sign up</a>
+  <div class="page-wrapper">
+    <header>
+      <div class="nav">
+        <h1 class="logo">Twotter</h1>
+        <div class="auth-buttons">
+          <a href="login.html" class="btn">Log in</a>
+          <a href="signup.html" class="btn btn-outline">Sign up</a>
+        </div>
       </div>
-    </div>
-  </header>
+    </header>
 
-  <main class="hero">
-    <section class="hero-text">
-      <h2>What's happening?</h2>
-      <p>Twotter is definitely not Twitter. It's just a totally unrelated place where you can blurt short thoughts into the void and see if anyone cares.</p>
-      <p>Join the fake bird app everyone’s pretending isn’t just the bird app.</p>
-      <div class="cta-buttons">
-        <a href="signup.html" class="btn btn-lg">Sign up</a>
-        <a href="login.html" class="btn btn-lg btn-outline">Log in</a>
-      </div>
-    </section>
-  </main>
+    <main class="hero">
+      <section class="hero-text">
+        <h2>What's happening?</h2>
+        <p>Twotter is definitely not Twitter. It's just a totally unrelated place where you can blurt short thoughts into the void and see if anyone cares.</p>
+        <p>Join the fake bird app everyone's pretending is not the bird app.</p>
+        <p>Twotter is open source and privacy focused. No ads, no tracking, no nonsense.</p>
+        <div class="cta-buttons">
+          <a href="signup.html" class="btn btn-lg">Sign up</a>
+          <a href="login.html" class="btn btn-lg btn-outline">Log in</a>
+        </div>
+      </section>
+    </main>
 
-  <footer>
-    <p>&copy; 2025 Twotter. Not affiliated with any real bird-based websites.</p>
-  </footer>
+    <footer>
+      <p>&copy; 2025 Twotter. Not affiliated with any real bird-based websites.</p>
+    </footer>
+  </div>
 </body>
 </html>
