--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF‑8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Twotter</title>
   <link rel="stylesheet" href="styles.css">
@@ -18,17 +18,28 @@
       </div>
     </header>
 
-    <main class="hero">
-      <section class="hero-text">
-        <h2>What's happening?</h2>
-        <p>Twotter is definitely not Twitter. It's just a totally unrelated place where you can blurt short thoughts into the void and see if anyone cares.</p>
-        <p>Join the fake bird app everyone's pretending is not the bird app.</p>
-        <p>Twotter is open source and privacy focused. No ads, no tracking, no nonsense.</p>
-        <div class="cta-buttons">
-          <a href="signup.html" class="btn btn-lg">Sign up</a>
-          <a href="login.html" class="btn btn-lg btn-outline">Log in</a>
+    <main class="hero hero-split">
+      <div class="hero-left">
+        <h2>What is Twotter?</h2>
+        <p>Twotter is a privacy-focused, open source short-post platform. No ads. No tracking. Just your thoughts.</p>
+        <ul class="features">
+          <li>Open source and community‑driven</li>
+          <li>Privacy first, no analytics or profiling</li>
+          <li>Clean, familiar interface</li>
+        </ul>
+      </div>
+      <div class="hero-right">
+        <div class="signup-panel">
+          <h3>Join Twotter</h3>
+          <form action="#" method="post" class="signup-form">
+            <input type="text" placeholder="Username" required>
+            <input type="email" placeholder="Email" required>
+            <input type="password" placeholder="Password" required>
+            <button type="submit" class="btn btn-lg">Sign up</button>
+          </form>
+          <p>Already on Twotter? <a href="login.html">Log in</a></p>
         </div>
-      </section>
+      </div>
     </main>
 
     <footer>
